--- a/BlackJackGame.Client/Controls/CardControl.xaml
+++ b/BlackJackGame.Client/Controls/CardControl.xaml
@@ -1,67 +1,21 @@
-﻿<UserControl x:Class="BlackJackGame.Client.Controls.CardControl"
+﻿<UserControl x:Class="BlackJackGame.Client.CardControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              Width="100" Height="150">
     <Grid>
-        <Viewport3D>
-            <Viewport3D.Camera>
-                <PerspectiveCamera Position="0,0,2" LookDirection="0,0,-2" FieldOfView="60"/>
-            </Viewport3D.Camera>
-
-            <ModelVisual3D>
-                <ModelVisual3D.Content>
-                    <DirectionalLight Color="White" Direction="-1,-1,-3"/>
-                </ModelVisual3D.Content>
-            </ModelVisual3D>
-
-            <ModelVisual3D>
-                <ModelVisual3D.Content>
-                    <GeometryModel3D>
-                        <GeometryModel3D.Geometry>
-                            <MeshGeometry3D 
-                                Positions="-0.5,0.75,0 0.5,0.75,0 0.5,-0.75,0 -0.5,-0.75,0"
-                                TextureCoordinates="0,0 1,0 1,1 0,1"
-                                TriangleIndices="0 1 2 0 2 3"/>
-                        </GeometryModel3D.Geometry>
-                        <GeometryModel3D.Material>
-                            <DiffuseMaterial>
-                                <DiffuseMaterial.Brush>
-                                    <VisualBrush x:Name="FrontBrush">
-                                        <VisualBrush.Visual>
-                                            <Image Source="/Images/Cards/back.png"/>
-                                        </VisualBrush.Visual>
-                                    </VisualBrush>
-                                </DiffuseMaterial.Brush>
-                            </DiffuseMaterial>
-                        </GeometryModel3D.Material>
-                        <GeometryModel3D.BackMaterial>
-                            <DiffuseMaterial>
-                                <DiffuseMaterial.Brush>
-                                    <VisualBrush x:Name="BackBrush">
-                                        <VisualBrush.Visual>
-                                            <Grid Background="White">
-                                                <TextBlock x:Name="CardSymbol"
-                                                           HorizontalAlignment="Center"
-                                                           VerticalAlignment="Center"
-                                                           FontSize="24"
-                                                           FontWeight="Bold"
-                                                           Foreground="Black"/>
-                                            </Grid>
-                                        </VisualBrush.Visual>
-                                    </VisualBrush>
-                                </DiffuseMaterial.Brush>
-                            </DiffuseMaterial>
-                        </GeometryModel3D.BackMaterial>
-                        <GeometryModel3D.Transform>
-                            <RotateTransform3D>
-                                <RotateTransform3D.Rotation>
-                                    <AxisAngleRotation3D x:Name="cardRotation" Axis="0,1,0" Angle="0"/>
-                                </RotateTransform3D.Rotation>
-                            </RotateTransform3D>
-                        </GeometryModel3D.Transform>
-                    </GeometryModel3D>
-                </ModelVisual3D.Content>
-            </ModelVisual3D>
-        </Viewport3D>
+        <Border CornerRadius="8" Background="#111">
+            <Border.Effect>
+                <DropShadowEffect BlurRadius="16" ShadowDepth="6" Opacity="0.5"/>
+            </Border.Effect>
+            <Grid RenderTransformOrigin="0.5,0.5">
+                <Grid.RenderTransform>
+                    <TransformGroup>
+                        <SkewTransform x:Name="Skew" AngleX="0" AngleY="0"/>
+                        <ScaleTransform x:Name="Scale" ScaleX="1" ScaleY="1"/>
+                    </TransformGroup>
+                </Grid.RenderTransform>
+                <Image x:Name="CardImage" Stretch="UniformToFill" />
+            </Grid>
+        </Border>
     </Grid>
 </UserControl>
