--- a/BlackJackGame.Client/Views/BetWindow.xaml
+++ b/BlackJackGame.Client/Views/BetWindow.xaml
@@ -1,27 +1,25 @@
-﻿<Window x:Class="BlackJackGame.Client.Views.BetWindow"
+﻿<Window x:Class="BlackJackGame.Client.BetWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Place Your Bet"
+        Title="Đặt Cược" Height="260" Width="420"
         WindowStartupLocation="CenterOwner"
-        ResizeMode="NoResize"
-        Height="300" Width="400"
-        Background="{StaticResource BackgroundColor}">
-    <StackPanel Margin="20">
-        <TextBlock Text="Place Your Bet" 
-                   FontSize="24" 
-                   Foreground="{StaticResource PrimaryTextColor}" 
-                   HorizontalAlignment="Center" 
-                   Margin="0,0,0,20"/>
-        <WrapPanel HorizontalAlignment="Center" Margin="0,0,0,20">
-            <Button Content="10" Style="{StaticResource ChipButtonStyle}" Click="Chip_Click"/>
-            <Button Content="50" Style="{StaticResource ChipButtonStyle}" Click="Chip_Click"/>
-            <Button Content="100" Style="{StaticResource ChipButtonStyle}" Click="Chip_Click"/>
-            <Button Content="500" Style="{StaticResource ChipButtonStyle}" Click="Chip_Click"/>
-        </WrapPanel>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,0,0,20">
-            <TextBlock Text="Current Bet: " FontSize="16" Foreground="{StaticResource PrimaryTextColor}"/>
-            <TextBlock x:Name="BetAmountText" Text="0" FontSize="16" Foreground="{StaticResource AccentColor}"/>
+        WindowStyle="None" ResizeMode="NoResize"
+        Background="Transparent" AllowsTransparency="True" ShowInTaskbar="False" Topmost="True">
+
+    <Border CornerRadius="16" Background="#DD1B3B6F" BorderBrush="Gold" BorderThickness="3" Padding="16">
+        <StackPanel>
+            <TextBlock Text="Chọn số tiền cược" Foreground="Gold" FontWeight="Bold" FontSize="20" HorizontalAlignment="Center" Margin="0,0,0,14"/>
+            <WrapPanel HorizontalAlignment="Center">
+                <Button Content="50" Tag="50" Click="Chip_Click" Margin="6" Width="80" Height="80" FontWeight="Bold"/>
+                <Button Content="100" Tag="100" Click="Chip_Click" Margin="6" Width="80" Height="80" FontWeight="Bold"/>
+                <Button Content="200" Tag="200" Click="Chip_Click" Margin="6" Width="80" Height="80" FontWeight="Bold"/>
+                <Button Content="500" Tag="500" Click="Chip_Click" Margin="6" Width="80" Height="80" FontWeight="Bold"/>
+            </WrapPanel>
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,12,0,0">
+                <Button Content="Xác nhận" Click="Confirm_Click" Width="120" Margin="8"/>
+                <Button Content="Hủy" Click="Cancel_Click" Width="120" Margin="8"/>
+            </StackPanel>
         </StackPanel>
-        <Button Content="Confirm" Style="{StaticResource ConfirmButtonStyle}" Click="Confirm_Click"/>
-    </StackPanel>
+    </Border>
 </Window>
